--- a/Markup/index.html
+++ b/Markup/index.html
@@ -31,24 +31,25 @@
                 <a class="nav__link" href="#">Markets</a>
                 <a class="nav__link" href="#">Insights</a>
                 <a class="nav__link" href="#">Video</a>
-                
+                <img class = "nav__menu-button" src="img/Icon.png" alt="menu">
             </nav>
         </div>
     </div>
 </header>
-
+<!-- Map and content-->
 <div class = "intro">
-    <div class="container">
+    <div class="container"> 
+        <div class="intro__background">
+            <img class = "intro__background-img" src="img/Map.svg" alt="map">
+        </div>
         <div class="intro__inner">
-            <div class="intro__background">
-                <img class = "intro__background-img" src="img/Map.svg" alt="map">
-            </div>
+           
             <h1 class = "intro__title">Banks Need to Sell Futures Used to Hedge</h1>
             <h3 class = "intro__subtitle">If Bank of America Corp. is right, Chinese stocks in Hong Kong are poised for a fresh wave of selling</h3>
         </div>
     </div>
     <div class="service">
-        <div class="container">
+        <div class="container"> 
             <div class="service__inner">
                 <div class="service__item">
                     <div class="service__item-img-wrapper">
