--- a/Markup/index.html
+++ b/Markup/index.html
@@ -39,22 +39,20 @@
 <!-- Map and content-->
 <div class = "intro">
     <div class="container">
-        <div class="intro__background">
-            <img class = "intro__background-img" src="img/Map.svg" alt="map">
-        </div>
-        <div class="intro__inner">
-           
-            <h1 class = "intro__title">Banks Need to Sell Futures Used to Hedge</h1>
-            <h3 class = "intro__subtitle">If Bank of America Corp. is right, Chinese stocks in Hong Kong are poised for a fresh wave of selling</h3>
-        </div>
-    </div>
-    <div class="service">
-        <div class="container"> 
+        <div class="intro__wrapper">
+            <div class="intro__background">
+                <img class = "intro__background-img" src="img/Map.svg" alt="map">
+            </div>
+            <div class="intro__inner">
+                <h1 class = "intro__title">Banks Need to Sell Futures Used to Hedge</h1>
+                <h3 class = "intro__subtitle">If Bank of America Corp. is right, Chinese stocks in Hong Kong are poised for a fresh wave of selling</h3>
+            </div>
+        <div class="service">
             <div class="service__inner">
                 <div class="service__item">
                     <div class="service__item-img-wrapper">
                         <img class = "service__item-img" src="img/phone.png" alt="phone">
-                </div>
+                    </div>
                     <div class="service__item-content-wrapper">
                         <p class = "service__item-suptitle">TECHNOLOGY</p>
                         <h3 class ="service__item-title">New York's Super-Fast Wi-Fi Is Live</h3>
@@ -82,6 +80,7 @@
                     </div>
                 </div> 
             </div>
+        </div>
         </div>
     </div>
 </div>
