--- a/Markup/index.html
+++ b/Markup/index.html
@@ -40,15 +40,17 @@
 <div class = "intro">
     <div class="container">
         <div class="intro__wrapper">
-            <div class="intro__background">
+            <div class="intro__banner">
+                <div class="intro__background">
                 <img class = "intro__background-img" src="img/Map.svg" alt="map">
-            </div>
-            <div class="intro__inner">
+                </div>
+                <div class="intro__inner">
                 <h1 class = "intro__title">Banks Need to Sell Futures Used to Hedge</h1>
                 <h3 class = "intro__subtitle">If Bank of America Corp. is right, Chinese stocks in Hong Kong are poised for a fresh wave of selling</h3>
-            </div>
-        <div class="service">
-            <div class="service__inner">
+                </div>
+            </div>    
+            <div class="service">
+                <div class="service__inner">
                 <div class="service__item">
                     <div class="service__item-img-wrapper">
                         <img class = "service__item-img" src="img/phone.png" alt="phone">
@@ -79,45 +81,164 @@
                         <p class ="service__item-subtitle">The best networking opportunities at Davos aren't inside the conference hall</p>
                     </div>
                 </div> 
+                </div>
             </div>
-        </div>
         </div>
     </div>
 </div>
+<!--Break-->
+<div class="breaker"></div>
 <!--Section 1-->
 <section class = "section">
     <div class="container">
         <div class="section__header">
             <h5 class = "section__suptitle">The story behind</h5>
             <h2 class = "section__title">Years of Experience</h2>
-            <div class = "sction__text">
+            <div class = "section__text">
                 <p>We have been designing and making headphones for a very long time. And now we are bringing everything we have learned over the past 25 years to premium sound.</p>
             </div>
         </div>
-    </div>
         <div class="slider">
             <div class="owl-carousel">
-                <div> Your Content </div>
-                <div> Your Content </div>
-                <div> Your Content </div>
-                <div> Your Content </div>
-                <div> Your Content </div>
-                <div> Your Content </div>
-                <div> Your Content </div>
+                <div><img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
+                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
+                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
+                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
+                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
+                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
+                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
               </div>
         </div>
     </div>
 </section>
+<!--Break-->
+<div class="breaker"></div>
 <!--Section 2-->
-<section>
-
+<section class = "section">
+    <div class="transfering__wrapper">
+        <div class="transfering__background">
+            <div class="section-overlay"></div>
+            <img class = "tranfering__background-img" src="img/Image2.svg" alt="box packing">
+        </div>
+        <div class="trasnfering__header">
+            <h5 class = "transfering__suptitle">Awesome Stuff</h5>
+            <h2 class = "transfering__title">Real-time All the Time</h2>
+            <div class = "transfering__text">
+                <p>Transferring large files is possible through our applications without the use of third party cloud applications, this way you have everything in a single place.</p>
+            </div>
+        </div> 
+        <div class="trasnfering__service">
+            <div class="container">
+                <div class="service__inner">
+            <div class="trasnfering__item">
+                <div class="trasnfering__item-img-wrapper">
+                    <img class = "trasnfering__item-img" src="img/flag.png" alt="flag icon">
+                </div>
+                <div class="service__item-content-wrapper">
+                    <h3 class ="trasnfering__item-title">Real-Time Sharing</h3>
+                    <p class ="trasnfering__item-subtitle">Be in control of your information by setting policies in real-time knowing your personal or company information is never out of reach</p>
+                </div>
+            </div>
+            <div class="trasnfering__item">
+                <div class="trasnfering__item-img-wrapper">
+                    <img class = "trasnfering__item-img" src="img/pen.png" alt="pen icon">
+                </div>
+                <div class="service__item-content-wrapper">
+                    <h3 class ="trasnfering__item-title">Edit With Anyone</h3>
+                    <p class ="trasnfering__item-subtitle">It’s simple, fast and easy to use. You can share your files through our mobile apps, web app, and desktop client (coming soon).</p>
+                </div>
+            </div>
+            <div class="trasnfering__item">
+                <div class="trasnfering__item-img-wrapper">
+                    <img class = "trasnfering__item-img" src="img/glass.png" alt="sandwatch icon">
+                </div>
+                <div class="service__item-content-wrapper">
+                    <h3 class ="trasnfering__item-title">Meet Deadline</h3>
+                    <p class ="trasnfering__item-subtitle">The buying of large-screen TVs has absolutely skyrocketed lately. Desktop client coming soon.</p>
+                </div>
+            </div> 
+                </div>
+            </div>
+        </div>
+    </div>     
 </section>
+<!--Break-->
+<div class="breaker"></div>
 <!--Section 3-->
-<section>
-
+<section class = "section">
+    <div class="container">
+        <div class="product__header">
+            <h5 class = "section__suptitle">Become our friend</h5>
+            <h2 class = "product__title">Join the 150,000 Businesses
+                Using our Product</h2>
+        </div>
+        <div class="slider">
+            <div class="owl-carousel">
+                <div><img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
+                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
+                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
+                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
+                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
+              </div>
+        </div>
+        <div class="slider__content">
+                <q class = "slider__content-quotes">Great Simple gives us a secure, unified place to store all of our work and helps reverse the friction that can come with having.</q>
+                <p class = "slider__content-name">Andrew Sims</p>
+                <p class = "slider__content-tag">Uber</p>
+        </div>
+    </div>
 </section>
+<!--Break-->
+<div class="breaker"></div>
 <!-- Footer -->
-<footer class="footer page__footer">
+<footer class="footer">
+    <div class="container">
+        <div class="footer__wrapper">
+            <div class="social">
+                <div class="social__logo">
+                    <img class = "social__logo-img" src="img/logo_footer.svg" alt="logo footer">
+                </div>
+                <div class="social__icon">
+                    <div class="social__icon__wrapper">
+                        <div class="social__icon-content">
+                            <img class = "social__icon-img" src="img/facebook.png" alt="facebook icon">
+                        </div>
+                        <div class="social__icon-content">
+                            <img class = "social__icon-img" src="img/twitter.png" alt="twitter icon">
+                        </div>
+                        <div class="social__icon-content">
+                            <img class = "social__icon-img" src="img/insta.png" alt="instagram icon">
+                        </div>
+                    </div>
+                </div>
+                <div class="social-text">
+                    <p>© 2016 Great Simple All rights reserved</p>
+                </div>
+            </div>
+            <div class="contact">
+                <div class="contact__header">
+                    <h5>Contact Us</h5>
+                </div>
+                <div class="contact-text">
+                    <p>hello@module.com</p>
+                    <p>Studio M, 4th Floor8 Lower
+                        Manchester street, M1 5QF</p>
+                    <p>+38 976 0875 9922</p>
+                </div>
+            </div>
+            <div class="subscribe">
+                <div class="subscribe__header">
+                    <h5>Subscribe now</h5>
+                </div>
+                <div class="subscribe-text">
+                    <p>Subscribe to the newsletter and get some crispy stuff every week.</p>
+                </div>
+                <div class="subscribe__form">
+
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
 
 <!-- JQuery-->
