--- a/Markup/index.html
+++ b/Markup/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="landing, training, first module, practise">
     <meta name="author" content="Ilyenko Denis">
     <!-- Page Title-->
-   <title>Home</title>
+   <title>Training landing</title>
     <!-- Main Style CSS-->
    <link rel="stylesheet" href="css/styles.css">
    <link rel="stylesheet" href="css/media.css">
@@ -234,7 +234,12 @@
                     <p>Subscribe to the newsletter and get some crispy stuff every week.</p>
                 </div>
                 <div class="subscribe__form">
-
+                    <div class="subscribe__form-text">
+                        <input type="text" placeholder="Enter your e-mail here" name="mail" required>
+                    </div>
+                    <div class="subscribe__from-button">
+                        <input type=image src="img/subscribe_btn.png" alt="Submit">
+                    </div>
                 </div>
             </div>
         </div>
