--- a/Markup/index.html
+++ b/Markup/index.html
@@ -13,31 +13,32 @@
    <link rel="stylesheet" href="css/styles.css">
    <link rel="stylesheet" href="css/media.css">
    <!-- Carousel-->
-    <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
-    <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
+   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
    <!-- Fonts-->
    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900&display=swap" rel="stylesheet">
 </head>
 <body>
 <!-- Header and nav -->
-<header class="header">
+<header class="header" id="header">
     <div class="container">
         <div class="header__inner">
-            <div class="header__logo">
+            <div class="header__logo" data-scroll="#intro">
                 <img class = "header__logo-img" src="img/Logo.svg" alt="logo">
             </div>
-            <nav class="nav">
+            <nav class="nav" id ="nav">
                 <a class="nav__link" href="#">News</a>
                 <a class="nav__link" href="#">Markets</a>
                 <a class="nav__link" href="#">Insights</a>
                 <a class="nav__link" href="#">Video</a>
-                <img class = "nav__menu-button" src="img/Icon.png" alt="menu">
             </nav>
+            <button class="nav-toggle" id="nav_toggle" type="button">
+                <span class="nav-toggle__item">Menu</span>
+            </button>
         </div>
     </div>
 </header>
 <!-- Map and content-->
-<div class = "intro">
+<div class = "intro" id="intro">
     <div class="container">
         <div class="intro__wrapper">
             <div class="intro__banner">
@@ -98,17 +99,19 @@
                 <p>We have been designing and making headphones for a very long time. And now we are bringing everything we have learned over the past 25 years to premium sound.</p>
             </div>
         </div>
-        <div class="slider">
-            <div class="owl-carousel">
-                <div><img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
-                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
-                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
-                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
-                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
-                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
-                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
-              </div>
-        </div>
+        
+            <div class="single-item">
+                <!-- <div class="owl-carousel"> -->
+                     <img class = "slider-img" src="img/Image.svg" alt="slider image">
+                     <img class = "slider-img" src="img/Image.svg" alt="slider image">
+                     <img class = "slider-img" src="img/Image.svg" alt="slider image">
+                     <img class = "slider-img" src="img/Image.svg" alt="slider image">
+                     <img class = "slider-img" src="img/Image.svg" alt="slider image">
+                     <img class = "slider-img" src="img/Image.svg" alt="slider image">
+                     <img class = "slider-img" src="img/Image.svg" alt="slider image">
+                <!-- </div> -->
+            </div>
+        
     </div>
 </section>
 <!--Break-->
@@ -172,14 +175,14 @@
             <h2 class = "product__title">Join the 150,000 Businesses
                 Using our Product</h2>
         </div>
-        <div class="slider">
-            <div class="owl-carousel">
-                <div><img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
-                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
-                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
-                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
-                <div> <img class = "slider-img" src="img/Image.svg" alt="slider image"> </div>
-              </div>
+        <div class="slider__product">
+             <div class="single-item1">
+                <img class = "slider-img" src="img/app_icon_1.png" alt="slider image">
+                <img class = "slider-img" src="img/app_icon_2.png" alt="slider image">
+                <img class = "slider-img" src="img/app_icon_3.png" alt="slider image">
+                <img class = "slider-img" src="img/app_icon_4.png" alt="slider image">
+                <img class = "slider-img" src="img/app_icon_5.png" alt="slider image">
+            </div>
         </div>
         <div class="slider__content">
                 <q class = "slider__content-quotes">Great Simple gives us a secure, unified place to store all of our work and helps reverse the friction that can come with having.</q>
@@ -247,15 +250,10 @@
 </footer>
 
 <!-- JQuery-->
-<script src="js/jquery.min.js"></script>
-<!-- OWL Carousel JS-->
-<script src="js/owl.carousel.min.js"></script>
-
-<script>
-    $(document).ready(function(){
-  $(".owl-carousel").owlCarousel();
-});
-</script>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<!--Slick slider-->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<!--JS-->
+<script src="js/main.js"></script>
 </body> 
 </html>
