--- a/Markup/index.html
+++ b/Markup/index.html
@@ -87,7 +87,7 @@
         </div>
     </div>
 </div>
-<!--Break-->
+<!--Break 1-->
 <div class="breaker"></div>
 <!--Section 1-->
 <section class = "section">
@@ -99,23 +99,19 @@
                 <p>We have been designing and making headphones for a very long time. And now we are bringing everything we have learned over the past 25 years to premium sound.</p>
             </div>
         </div>
-        
-            <div class="single-item">
-                <!-- <div class="owl-carousel"> -->
-                     <img class = "slider-img" src="img/Image.svg" alt="slider image">
-                     <img class = "slider-img" src="img/Image.svg" alt="slider image">
-                     <img class = "slider-img" src="img/Image.svg" alt="slider image">
-                     <img class = "slider-img" src="img/Image.svg" alt="slider image">
-                     <img class = "slider-img" src="img/Image.svg" alt="slider image">
-                     <img class = "slider-img" src="img/Image.svg" alt="slider image">
-                     <img class = "slider-img" src="img/Image.svg" alt="slider image">
-                <!-- </div> -->
-            </div>
-        
+        <div class="single-item">
+            <img class = "slider-img" src="img/Image.svg" alt="slider image">
+            <img class = "slider-img" src="img/Image.svg" alt="slider image">
+            <img class = "slider-img" src="img/Image.svg" alt="slider image">
+            <img class = "slider-img" src="img/Image.svg" alt="slider image">
+            <img class = "slider-img" src="img/Image.svg" alt="slider image">
+            <img class = "slider-img" src="img/Image.svg" alt="slider image">
+            <img class = "slider-img" src="img/Image.svg" alt="slider image">
+        </div>
     </div>
 </section>
-<!--Break-->
-<div class="breaker"></div>
+<!--Break 2-->
+<div class="breaker-two"></div>
 <!--Section 2-->
 <section class = "section">
     <div class="transfering__wrapper">
@@ -165,8 +161,8 @@
         </div>
     </div>     
 </section>
-<!--Break-->
-<div class="breaker"></div>
+<!--Break 3-->
+<div class="breaker-three"></div>
 <!--Section 3-->
 <section class = "section">
     <div class="container">
@@ -191,8 +187,8 @@
         </div>
     </div>
 </section>
-<!--Break-->
-<div class="breaker"></div>
+<!--Break 4-->
+<div class="breaker-four"></div>
 <!-- Footer -->
 <footer class="footer">
     <div class="container">
