--- a/Landing_2/index.html
+++ b/Landing_2/index.html
@@ -8,35 +8,172 @@
     <meta name="keywords" content="landing, training, second module, practise">
     <meta name="author" content="Ilyenko Denis">
     <!-- Page Title-->
-   <title>Landing 2.0</title>
+    <title>Landing 2.0</title>
     <!-- Main Style CSS-->
-   <link rel="stylesheet" href="css/styles.css">
-   <link rel="stylesheet" href="css/media.css">
-   <!-- Carousel-->
-   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-   <!-- Fonts-->
-   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="img/header__question/style.css"
+
+    
+    <!-- Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://i.icomoon.io/public/temp/13a5e570dd/UntitledProject/style.css">
 </head>
 <body>
-<div class="container">
-    <div class="footer-menu-first">
-        <ul>
-            <li>Mag. Michael HERTZBERGMag. Michael HERTZBERGMag. Michael HERTZBERGMag. Michael HERTZBERGMag. Michael HERTZBERGMag. Michael HERTZBERGMag. Michael HERTZBERGMag. Michael HERTZBERGMag. Michael HERTZBERGMag. Michael HERTZBERGMag. Michael HERTZBERG</li>
-            <li>Rechtsanwalt / Attorney at law</li>
-            <li>A-1010 Wien, Stallburggasse 4/13</li>
-            <li>Tel: + 43 1 533 71 11 40</li>
-            <li><a href="mailto:hertzberg@legal-team.at">E-Mail:hertzberg@legal-team.at</a></li>
-        </ul>
+<!-- Header-->
+<header class="header">
+    <div class="container">
+        <div class="header__inner">
+            <div class="header__logo">
+                <a href = "#">Insight</a>
+                <p>your nice slogan</p>
+            </div>
+            <nav class="nav">
+                <button class="header-button">
+                    <i class="icon-help-circle"></i>
+                    <p>How it works</p>
+                </button>
+                <button class="header-button">
+                    <i class="icon-user"></i>
+                    <p>Sign up</p>
+                </button>
+                <button class="header-button">
+                    <i class="icon-lock"></i>
+                    <p>Login</p>
+                </button>
+            </nav>
+        </div>
     </div>
-    <div class="footer-menu-second">
-        <ul>
-            <li>Mag. Michael HERTZBERGMag. Michael HERTZBERGMag. Michael HERTZBERGMag. Michael HERTZBERGMag. Michael HERTZBERGMag. Michael HERTZBERGMag. Michael HERTZBERGMag. Michael HERTZBERGMag. Michael HERTZBERGMag. Michael HERTZBERG</li>
-            <li>Rechtsanwalt / Attorney at law</li>
-            <li>A-1010 Wien, Stallburggasse 4/13</li>
-            <li>Tel: + 43 1 533 71 11 40</li>
-            <li><a href="mailto:hertzberg@legal-team.at">E-Mail:hertzberg@legal-team.at</a></li>
-        </ul>
+</header>
+<!--Intro-->
+<div class="intro">
+    <div class="container">
+        <div class="intro__inner">
+            <div class="intro-title">
+                <h1>Introducing Something Cool</h1>
+                <p>I would like to avoid making these mistakes. But how do you avoid mistakes you make by default? Ideally you transform your life so it has other defaults.</p>
+            </div>
+            <div class="intro-img">
+                <img src ="/img/iphone.png"  alt = "intro image">
+            </div>
+            <div class="intro-form">
+                <p>New to Insight? <strong>Sign up here: </strong></p2>
+                <input type="text" id="fname" name="fname" value="" placeholder="Name"><br>
+                <input type="email" id="email" name="email" value="" placeholder="temirbaev@gma"><br>
+                <input type="password" id="password" name="password" value="" placeholder="Password"><br>
+                <p>By creating an account, I accept Insight’s <a href ="#" title ="Terms of Service">Terms of Service</a> and <a href = "#" title = "Privacy Policy" >Privacy Policy.</a></p>
+                <button>Sign Up</button>
+            </div>
+        </div>
     </div>
 </div>
+<!-- Services -->
+<section class="services">
+    <div class="container">
+        <div class="services-wrapper">
+            <div class="services__inner">
+                <div class= "services-img">
+                <img src="/img/map.png" alt="services map">
+                </div>
+                <div class="services-text">
+                    <h3>Top of my to do list</h3>
+                    <p>I would like to avoid making these mistakes. But how do you avoid mistakes you make by default? Ideally you transform your life so it has other defaults.</p>
+                </div>
+                <div class="services-button">
+                    <button>Learn more</button>
+                </div>
+            </div>
+            <div class="services__inner">
+                <div class= "services-img">
+                <img src="/img/duck.png" alt="services duck">
+                </div>
+                <div class="services-text">
+                    <h3>The alarming thing</h3>
+                    <p>I would like to avoid making these mistakes. But how do you avoid mistakes you make by default? Ideally you transform your life so it has other defaults.</p>
+                </div>
+                <div class="services-button">
+                    <button>Learn more</button>
+                </div>
+            </div>
+            <div class="services__inner">
+                <div class= "services-img">
+                <img src="/img/book.png" alt="services book">
+                </div>
+                <div class="services-text">
+                    <h3>Errors of omission</h3>
+                    <p>I would like to avoid making these mistakes. But how do you avoid mistakes you make by default? Ideally you transform your life so it has other defaults.</p>
+                </div>
+                <div class="services-button">
+                    <button>Learn more</button>
+                </div>
+            </div>
+        </div>
+        <div class="services-subtitle">
+            <p>There are a lot of great reasons to use Insight. <span>Check out our features</span><i class="icon-play_circle_filled"></i></p>
+        </div>
+    </div>
+</section>
+<!-- Footer -->
+<footer class = "footer">
+    <div class="container">
+        <div class="footer-wrapper">
+            <div class="footer__list-wrapper">
+                <div class="footer__list">
+                    <h5>MAIN</h5>
+                    <ul>
+                        <li>Start Here</li>
+                        <li>Portfolio</li>
+                        <li>Meet Us</li>
+                        <li>Blog</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
+                <div class="footer__list">
+                    <h5>COMPANY</h5>
+                    <ul>
+                        <li>About</li>
+                        <li>Help</li>
+                        <li>Support</li>
+                        <li>Jobs</li>
+                        <li>Directory</li>
+                    </ul>
+                </div>
+                <div class="footer__list">
+                    <h5>ONE MORE</h5>
+                    <ul>
+                        <li>Meetups</li>
+                        <li>Handbook</li>
+                        <li>Privacy</li>
+                        <li>API</li>
+                        <li>Equipment</li>
+                    </ul>
+                </div>
+                <div class="footer__list">
+                    <h5>THE LAST ONE</h5>
+                    <ul>
+                        <li>Meetups</li>
+                        <li>Handbook</li>
+                        <li>Privacy</li>
+                        <li>API</li>
+                        <li>Equipment</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__social-wrapper">
+                <div class="footer__social">
+                    <i class="icon-vimeo"></i>
+                    <i class="icon-facebook"></i>
+                    <i class="icon-twitter"></i>
+                </div>
+                <div class="footer__social">
+                    <p>© 2013 be happy</p>
+                    <p>Privacy Policy &middot Terms of Service</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
 </body>
 </html>
